bk_ida/gccida/c3/push_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:5004:9: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
depth = spelling_0 - spelling_base; 
        ^~~~~~~~~~
        spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:5012:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:5014:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->kind = 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:5015:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->u.s = string; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:5016:3: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
++spelling_0; 
  ^~~~~~~~~~
  spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_string/src/obj/c-typeck.o] Error 1
